chore: 🤖 fix wrong tools

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react",
-    "types": ["@astro/image/client"]
+    "types": ["@astrojs/image/client"]
   }
 }
-
