--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^4.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
