--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
+    "tailwindcss": "^3.4.3",
     "astro": "^4.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.20"
