--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "astro": "^4.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.20"
   }
 }
