--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@headlessui/react": "^2.0.4",
     "astro": "^4.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
