--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "live-import": "node --experimental-vm-modules tools/import.mjs"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/image": "^0.18.0",
-    "@astrojs/react": "^3.4.0",
-    "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/tailwind": "^5.1.0",
-    "@headlessui/react": "^2.0.4",
-    "astro": "^4.9.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "@astrojs/image": "^0.7.0",
+    "@astrojs/react": "^1.1.2",
+    "@astrojs/rss": "^1.0.1",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^1.0.1",
+    "@headlessui/react": "^1.7.1",
+    "astro": "^1.2.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.20"
+    "@types/react": "^18.0.20",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-astro": "^0.19.0",
+    "rehype-add-classes": "^1.0.0"
   }
 }
