--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "live-import": "node --experimental-vm-modules tools/import.mjs"
   },
   "dependencies": {
-    "@astrojs/image": "^0.7.0",
-    "@astrojs/react": "^1.1.2",
-    "@astrojs/rss": "^1.0.1",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^1.0.1",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/react": "3.4.0",
+    "@astrojs/rss": "4.0.6",
+    "@astrojs/sitemap": "3.1.5",
+    "@astrojs/tailwind": "^5.1.0",
     "@headlessui/react": "^1.7.1",
-    "astro": "^1.2.3",
+    "astro": "^4.9.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.20",
@@ -29,5 +30,6 @@
     "eslint": "^8.23.1",
     "eslint-plugin-astro": "^0.19.0",
     "rehype-add-classes": "^1.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
